# supa-pi

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  LICENSE.md  README.md  biome.jsonc  fzf.json  keybindings.json  package.json  setup.sh  tsconfig.json
.pi/agents/: execute-step.md
agents/: architect.md  build-error-resolver.md  code-reviewer.md  code-simplifier.md  database-reviewer.md  doc-updater.md  e2e-runner.md  execute-step.md  executor.md  explorer.md  performance-reviewer.md  planner.md  refactor-cleaner.md  researcher.md  security-reviewer.md  tdd-guide.md
docs/context/: README.md  code-improvement.md  extension-registration.md  questionnaire.md
extensions/: AGENTS.md  extension-registration.compatibility.test.ts  handoff.ts  llm-auth.test.ts  llm-auth.ts  no-sleep.ts  questionnaire.test.ts  questionnaire.ts  read-patch.test.ts  read-patch.ts  review.test.ts  review.ts  rules.ts  session-query.ts  skills.ts  whimsical.ts
extensions/ast-grep/: index.ts  prompt.md
extensions/btw/: helper.test.ts  helper.ts  index.ts  subagent.test.ts  subagent.ts
extensions/caveman/: README.md  caveman-mode.test.ts  caveman-mode.ts  configuration_schema.json  index.ts
extensions/pieditor/native/syntect-picker-preview/: Cargo.toml  README.md  index.d.ts  index.js
extensions/pieditor/native/syntect-picker-preview/src/: lib.rs
prompts/: execute.md  grill-me.md  grill-with-docs.md  research-brief.md  to-prd.md
scripts/: docs-list.ts  execute-smoke.ts
themes/: amp-dark.json  amp-gruvbox-dark-hard.json  nightowl.json  tokyonight-moon.json
(+406 files in other folders)
