[package]
name = "syntect_picker_preview_native"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bat = { version = "0.26.1", default-features = false }
napi = { version = "3.3.0", default-features = false, features = ["napi8"] }
napi-derive = "3.2.5"
syntect = { version = "5.3.0", default-features = false, features = ["default-onig"] }

[build-dependencies]
napi-build = "2.1.5"
